<resources>
    <string name="app_name">Money Box</string>
    <string name="title_of_goal">TITLE OF GOAL</string>
    <string name="goal_info">GOAL INFO</string>
    <string name="enter_title_of_goal">Enter Title Of Goal</string>
    <string name="goal_amount">Goal Amount</string>
    <string name="enter_amount">Enter amount…</string>
    <string name="saving_frequency">Saving Frequency</string>
    <string name="not_planned">Not Planned</string>
    <string name="reminder">Reminder</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="reminder_day">Reminder Day</string>
    <string name="date">Date</string>
    <string name="close_window">Close Window</string>
    <string name="save_goal">Save Goal</string>
    <string name="goals">Goals</string>
    <string name="completed_goals">Completed Goals</string>
    <string name="remaining_days">Remaining Days</string>
    <string name="target_amount">Target Amount</string>
    <string name="remaining_amount">Remaining</string>
    <string name="edit_goal">Edit goal</string>
    <string name="deposit_money">deposit Money</string>
    <string name="goal_completed">Goal Completed</string>
    <string name="delete_toolbar_icon">Delete Toolbar icon</string>
    <string name="goals_list_is_empty">Goals List Is Empty</string>
    <string name="menu">Menu</string>
    <string name="saving_need_to_meet">saving needed to meet the goal</string>
    <string name="deposit">Deposit</string>
    <string name="you_don_t_have_any_active_goal">You don\'t have any active goal</string>
    <string name="you_don_t_have_any_completed_goal">You don\'t have any completed goal</string>
    <string name="contributions">Contributions</string>
    <string name="deposit_money_toolbar">Deposit Money</string>
    <string name="amount">Amount</string>
    <string name="negative_amount_will_decrease_savings">*Negative amount will decrease savings</string>
    <string name="add_goal">Add Goal</string>
    <string name="contribution_history">Contribution History</string>
    <string name="you_don_t_have_any_contribution">You don\'t have any contribution</string>
    <string name="add_money">Add Money</string>
    <string name="overview">Overview</string>
    <string name="view_contribution_history">View Contribution History</string>
    <string name="target_date">Target Date</string>
    <string name="deposited">Deposited</string>
    <string name="app_logo">App Logo</string>
    <string name="remaining">Remaining</string>
    <string name="searchHintText_searchToolbar">Search</string>
    <string name="goal_currency">Goal Currency</string>


    <!--Ads-->
    <string name="main_list_bottom_add">ca-app-pub-6298670741113425/1643322496</string>
    <string name="completed_goals_list_bottom_add">ca-app-pub-6298670741113425/5265613555</string>
    <string name="contributions_list_bottom_add">ca-app-pub-6298670741113425/7489996804</string>
    <string name="goal_overview_interstitial">ca-app-pub-6298670741113425/9496395776</string>
    <!--<string name="goal_overview_interstitial">ca-app-pub-3940256099942544/1033173712</string>  test ad -->
    <string name="admob_app_id">ca-app-pub-6298670741113425~2026465870</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_deposited">Deposited</string>
    <string name="total_remaining">Remaining</string>
    <string name="settings">Settings</string>
    <string name="default_currency">Default Currency</string>
    <string name="show_goals_total">Show Goals Total</string>
    <string name="rate_this_app">Rate this app ♥️</string>
    <string name="total">TOTAL</string>
    <string name="about">About</string>
    <string name="about_app">This app enable you to keep track of your savings, so you can complete them easily.
        \n\nMoney Box is the tool that manage your savings. It will keep you on track to bring your purchase goals to life. It takes away the frustration of saving money for a specific goal. It gives you the power and confidence to succeed every time, and that’s just plan smart!</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
