<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".About"
    >


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/key_line_16dp"
        >
        <include
            android:id="@+id/include"
            layout="@layout/toolbar" />

        <ImageButton
            android:id="@+id/ic_close"
            android:layout_width="@dimen/toolbar_button_width_height"
            android:layout_height="@dimen/toolbar_button_width_height"
            android:background="@drawable/ripple_effect"
            android:contentDescription="@string/close_window"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="@+id/include"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/toolbar_text_size"
            app:fontFamily="@font/sfui_display_medium"
            app:layout_constraintBottom_toBottomOf="@+id/include"
            app:layout_constraintEnd_toEndOf="@+id/include"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/splash_screen_logo_width_height"
            android:layout_height="@dimen/splash_screen_logo_width_height"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            android:contentDescription="@string/app_logo" />


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/key_line_8dp"
            app:fontFamily="@font/sfui_display_medium"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/splash_screen_logo_text_size"
            app:layout_constraintEnd_toEndOf="@id/icon"
            app:layout_constraintStart_toStartOf="@id/icon"
            app:layout_constraintTop_toBottomOf="@+id/icon" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/key_line_16dp"
            android:padding="@dimen/key_line_16dp"
            app:cardCornerRadius="@dimen/key_line_8dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app"
                android:padding="@dimen/key_line_16dp"
                android:textColor="@color/textBoxTextColor"
                android:textSize="@dimen/about_app_text_size"/>


        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>
</ScrollView>

